--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.ptndemerde.monde_technologique": "Monde Technologique",
+  "painting.ptndemerde.painting_child.author": "Maknav",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
+  "painting.ptndemerde.painting_child.title": "Child",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "subtitles.monde_technologique": "Ils sont pas réels..."
 }
