--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -3,6 +3,7 @@
   "painting.ptndemerde.painting_child.author": "Maknav",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
   "painting.ptndemerde.painting_child.title": "Child",
+  "item.ptndemerde.falin_sword": "Épée en Falin",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "subtitles.monde_technologique": "Ils sont pas réels..."
 }
