--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.ptndemerde.monde_technologique": "Monde Technologique",
   "painting.ptndemerde.painting_child.author": "Maknav",
   "block.ptndemerde.chicha": "Chicha",
+  "block.ptndemerde.chicha_rouge": "Chicha rouge",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
   "painting.ptndemerde.painting_child.title": "Child",
   "item.ptndemerde.falin_sword": "Épée en Falin",
