--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.ptndemerde.monde_technologique": "Monde Technologique",
+  "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
   "painting.ptndemerde.painting_child.author": "Maknav",
   "block.ptndemerde.chicha": "Chicha",
   "block.ptndemerde.chicha_rouge": "Chicha rouge",
@@ -7,5 +8,6 @@
   "painting.ptndemerde.painting_child.title": "Child",
   "item.ptndemerde.falin_sword": "Épée en Falin",
   "effect.ptndemerde.effect_chicha": "Narguilé",
-  "subtitles.monde_technologique": "Ils sont pas réels..."
+  "subtitles.monde_technologique": "Ils sont pas réels...",
+  "entity.ptndemerde.chat_tete_nouille": "Chat vêtu de nouilles"
 }
