--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,18 +1,26 @@
 {
   "painting.ptndemerde.painting_child.author": "Maknav",
+  "advancements.advancement_tabac.descr": "Vous avez commencé à produire du tabac !",
+  "block.ptndemerde.chicha": "Chicha",
+  "block.ptndemerde.chicha_rouge": "Chicha rouge",
+  "item.ptndemerde.fleur_de_tabac": "Fleur De Tabac",
+  "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
+  "painting.ptndemerde.painting_child.title": "Child",
+  "entity.ptndemerde.chicheur": "Chicheur",
+  "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
+  "advancements.advancement_tabac.title": "Sur la route du chichage",
   "block.ptndemerde.tabac_grown": "Tabac 1",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
   "block.ptndemerde.tabac_1": "Tabac 1",
   "block.ptndemerde.tabac_2": "Tabac 1",
   "item.ptndemerde.monde_technologique": "Monde Technologique",
-  "block.ptndemerde.chicha": "Chicha",
-  "block.ptndemerde.chicha_rouge": "Chicha rouge",
-  "item.ptndemerde.fleur_de_tabac": "Fleur de Tabac",
-  "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
-  "item.ptndemerde.graines_de_tabac": "Graines de Tabac",
-  "painting.ptndemerde.painting_child.title": "Child",
+  "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
+  "item.ptndemerde.graines_de_tabac": "Graines De Tabac",
   "item.ptndemerde.falin_sword": "Épée en Falin",
+  "advancements.advancement_chicha.title": "Narguilator",
   "subtitles.monde_technologique": "Ils sont pas réels...",
-  "item.ptndemerde.tabac_fume": "Tabac fumé"
+  "item.ptndemerde.tabac_fume": "Tabac Fume",
+  "entity.ptndemerde.chat_tete_nouille": "Chat vêtu de nouilles",
+  "item.ptndemerde.chicheur_spawn_egg": "Chicheur Spawn Egg"
 }
