--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,18 +1,24 @@
 {
   "painting.ptndemerde.painting_child.author": "Maknav",
+  "gui.ptndemerde.gui_chicheur.label_x50": "x50",
+  "gui.ptndemerde.gui_chicheur.label_evidemment": "évidemment.",
   "advancements.advancement_tabac.descr": "Vous avez commencé à produire du tabac !",
+  "gui.ptndemerde.gui_chicheur.label_dependance_si_vous_avez_de_quoi": "dépendance, si vous avez de",
   "block.ptndemerde.chicha": "Chicha",
-  "block.ptndemerde.chicha_rouge": "Chicha rouge",
   "item.ptndemerde.fleur_de_tabac": "Fleur De Tabac",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
   "painting.ptndemerde.painting_child.title": "Child",
   "entity.ptndemerde.chicheur": "Chicheur",
+  "item.ptndemerde.chair_putrefiee_doree": "Chair putréfiée dorée",
+  "gui.ptndemerde.gui_chicheur.label_quoi_soulager_la_sienne_aussi_e": "quoi soulager la sienne aussi,",
   "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
+  "gui.ptndemerde.gui_chicheur.label_echanger_de_quoi_soulager_votre": "échanger de quoi soulager votre",
   "advancements.advancement_tabac.title": "Sur la route du chichage",
   "block.ptndemerde.tabac_grown": "Tabac 1",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
   "block.ptndemerde.tabac_1": "Tabac 1",
+  "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
   "block.ptndemerde.tabac_2": "Tabac 1",
   "item.ptndemerde.monde_technologique": "Monde Technologique",
   "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
@@ -20,6 +26,7 @@
   "item.ptndemerde.falin_sword": "Épée en Falin",
   "advancements.advancement_chicha.title": "Narguilator",
   "subtitles.monde_technologique": "Ils sont pas réels...",
+  "gui.ptndemerde.gui_chicheur.label_le_chicheur_veut_bien_vous_echan": "Le chicheur veut bien vous",
   "item.ptndemerde.tabac_fume": "Tabac Fume",
   "entity.ptndemerde.chat_tete_nouille": "Chat vêtu de nouilles",
   "item.ptndemerde.chicheur_spawn_egg": "Chicheur Spawn Egg"
