Datura Stramonium + Tab

--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -18,8 +18,10 @@
   "gui.ptndemerde.gui_chicheur.label_echanger_de_quoi_soulager_votre": "échanger de quoi soulager votre",
   "advancements.advancement_tabac.title": "Sur la route du chichage",
   "block.ptndemerde.tabac_grown": "Tabac 1",
+  "item_group.ptndemerde.ptndemerde_tab": "Ptndemerde",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
+  "block.ptndemerde.datura_stramonium": "Datura Stramonium",
   "block.ptndemerde.tabac_1": "Tabac 1",
   "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
   "block.ptndemerde.tabac_2": "Tabac 1",
