--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
+  "item.ptndemerde.mu_spawn_egg": "Mu Spawn Egg",
   "painting.ptndemerde.painting_child.author": "Maknav",
+  "entity.ptndemerde.mu": "Mu",
   "block.ptndemerde.tabac_grown": "Tabac 1",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
