Datura bone meal

--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -2,6 +2,7 @@
   "painting.ptndemerde.painting_child.author": "Maknav",
   "entity.ptndemerde.porc": "Porc",
   "biome.ptndemerde.datura_fields": "Datura Fields",
+  "entity.ptndemerde.mu": "Mu",
   "gui.ptndemerde.gui_chicheur.label_x50": "x50",
   "gui.ptndemerde.gui_chicheur.label_evidemment": "évidemment.",
   "advancements.advancement_tabac.descr": "Vous avez commencé à produire du tabac !",
@@ -15,6 +16,7 @@
   "item.ptndemerde.chair_putrefiee_doree": "Chair putréfiée dorée",
   "gui.ptndemerde.gui_chicheur.label_quoi_soulager_la_sienne_aussi_e": "quoi soulager la sienne aussi,",
   "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
+  "item.ptndemerde.mu_spawn_egg": "Mu Spawn Egg",
   "gui.ptndemerde.gui_chicheur.label_echanger_de_quoi_soulager_votre": "échanger de quoi soulager votre",
   "advancements.advancement_tabac.title": "Sur la route du chichage",
   "block.ptndemerde.tabac_grown": "Tabac 1",
