Campfire bucket + nouilles

--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -9,14 +9,17 @@
   "gui.ptndemerde.gui_chicheur.label_dependance_si_vous_avez_de_quoi": "dépendance, si vous avez de",
   "item.ptndemerde.porc_spawn_egg": "Porc Spawn Egg",
   "block.ptndemerde.chicha": "Chicha",
+  "item.ptndemerde.nouilles": "Nouilles",
   "item.ptndemerde.fleur_de_tabac": "Fleur De Tabac",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
   "painting.ptndemerde.painting_child.title": "Child",
   "entity.ptndemerde.chicheur": "Chicheur",
   "item.ptndemerde.chair_putrefiee_doree": "Chair putréfiée dorée",
   "gui.ptndemerde.gui_chicheur.label_quoi_soulager_la_sienne_aussi_e": "quoi soulager la sienne aussi,",
+  "block.ptndemerde.campfire_bucket": "Feu de camp avec un seau",
   "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
   "item.ptndemerde.mu_spawn_egg": "Mu Spawn Egg",
+  "item.ptndemerde.nouilles_seches": "Nouilles sèches",
   "gui.ptndemerde.gui_chicheur.label_echanger_de_quoi_soulager_votre": "échanger de quoi soulager votre",
   "advancements.advancement_tabac.title": "Sur la route du chichage",
   "block.ptndemerde.tabac_grown": "Tabac 1",
