--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -6,6 +6,7 @@
   "gui.ptndemerde.gui_chicheur.label_x50": "x50",
   "gui.ptndemerde.gui_chicheur.label_evidemment": "évidemment.",
   "advancements.advancement_tabac.descr": "Vous avez commencé à produire du tabac !",
+  "item.ptndemerde.lambda_bat_spawn_egg": "Lambda Bat Spawn Egg",
   "gui.ptndemerde.gui_chicheur.label_dependance_si_vous_avez_de_quoi": "dépendance, si vous avez de",
   "item.ptndemerde.porc_spawn_egg": "Porc Spawn Egg",
   "block.ptndemerde.chicha": "Chicha",
@@ -27,6 +28,7 @@
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
   "block.ptndemerde.datura_stramonium": "Datura Stramonium",
+  "entity.ptndemerde.lambda_bat": "Lambda Bat",
   "block.ptndemerde.tabac_1": "Tabac 1",
   "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
   "block.ptndemerde.tabac_2": "Tabac 1",
