--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "entity.ptndemerde.porc": "Porc",
+  "entity.ptndemerde.omega_titan": "Omega Titan",
   "biome.ptndemerde.datura_fields": "Datura Fields",
   "entity.ptndemerde.mu": "Mu",
   "gui.ptndemerde.gui_chicheur.label_x50": "x50",
@@ -9,12 +10,15 @@
   "gui.ptndemerde.gui_chicheur.label_dependance_si_vous_avez_de_quoi": "dépendance, si vous avez de",
   "block.ptndemerde.chicha": "Chicha",
   "item.ptndemerde.nouilles": "Nouilles",
+  "entity.ptndemerde.molosse": "Sigma Hound",
   "item.ptndemerde.fleur_de_tabac": "Fleur De Tabac",
   "item.ptndemerde.monde_technologique.desc": "Ils sont pas réels...",
   "subtitles.tirer_une_taf": "Tire une taf",
+  "subtitles.unheard": "cry of the unheard",
   "painting.ptndemerde.painting_child.title": "Child",
   "entity.ptndemerde.chicheur": "Chicheur",
   "block.ptndemerde.campfire_bucket": "Feu de camp avec un seau",
+  "item.ptndemerde.molosse_spawn_egg": "Sigma Hound Spawn Egg",
   "block.ptndemerde.tabac_grown": "Tabac 1",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
@@ -24,7 +28,9 @@
   "block.ptndemerde.tabac_2": "Tabac 1",
   "item.ptndemerde.bol_nouilles_jajangmyeon": "Bol de nouilles Jajangmyeon",
   "item.ptndemerde.monde_technologique": "Monde Technologique",
+  "item.ptndemerde.bol_nouilles_slime": "Bol de nouilles au Slime",
   "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
+  "item.ptndemerde.papier_ines": "Papier Ines",
   "item.ptndemerde.graines_de_tabac": "Graines De Tabac",
   "subtitles.monde_technologique": "Ils sont pas réels...",
   "item.ptndemerde.tabac_fume": "Tabac Fume",
@@ -34,6 +40,7 @@
   "painting.ptndemerde.painting_child.author": "Maknav",
   "effect.ptndemerde.effect_relaxed": "Relaxé",
   "item.ptndemerde.porc_spawn_egg": "Porc Spawn Egg",
+  "item.ptndemerde.laser_ball": "Laser Ball",
   "item.ptndemerde.bol_nouilles_legumes": "Bol de nouilles aux légumes",
   "item.ptndemerde.bol_nouilles": "Bol de nouilles",
   "item.ptndemerde.chair_putrefiee_doree": "Chair putréfiée dorée",
@@ -46,6 +53,7 @@
   "item_group.ptndemerde.ptndemerde_tab": "Ptndemerde",
   "item.ptndemerde.petard_datura": "Pétard de Datura",
   "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
+  "item.ptndemerde.omega_titan_spawn_egg": "Omega Titan Spawn Egg",
   "item.ptndemerde.falin_sword": "Épée en Falin",
   "advancements.advancement_chicha.title": "Narguilator",
   "gui.ptndemerde.gui_chicheur.label_le_chicheur_veut_bien_vous_echan": "Le chicheur veut bien vous"
