Salvia Divinorum + Sorbet Etrange

--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -15,6 +15,7 @@
   "subtitles.tirer_une_taf": "Tire une taf",
   "painting.ptndemerde.painting_child.title": "Child",
   "entity.ptndemerde.chicheur": "Chicheur",
+  "block.ptndemerde.salvia_divinorum": "Salvia divinorum",
   "block.ptndemerde.campfire_bucket": "Feu de camp avec un seau",
   "item.ptndemerde.molosse_spawn_egg": "Sigma Hound Spawn Egg",
   "block.ptndemerde.tabac_grown": "Tabac 1",
@@ -30,6 +31,7 @@
   "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
   "item.ptndemerde.papier_ines": "Papier Ines",
   "item.ptndemerde.graines_de_tabac": "Graines De Tabac",
+  "item.ptndemerde.sorbet_etrange": "Sorbet étrange",
   "subtitles.monde_technologique": "Ils sont pas réels...",
   "item.ptndemerde.tabac_fume": "Tabac Fume",
   "entity.ptndemerde.chat_tete_nouille": "Chat vêtu de nouilles",
