--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "entity.ptndemerde.omega_titan": "Omega Titan",
   "entity.ptndemerde.porc": "Porc",
   "biome.ptndemerde.datura_fields": "Datura Fields",
   "entity.ptndemerde.mu": "Mu",
@@ -16,6 +17,7 @@
   "subtitles.unheard": "cry of the unheard",
   "painting.ptndemerde.painting_child.title": "Child",
   "entity.ptndemerde.chicheur": "Chicheur",
+  "block.ptndemerde.salvia_divinorum": "Salvia divinorum",
   "block.ptndemerde.campfire_bucket": "Feu de camp avec un seau",
   "item.ptndemerde.molosse_spawn_egg": "Sigma Hound Spawn Egg",
   "block.ptndemerde.tabac_grown": "Tabac 1",
@@ -31,12 +33,14 @@
   "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
   "item.ptndemerde.papier_ines": "Papier Ines",
   "item.ptndemerde.graines_de_tabac": "Graines De Tabac",
+  "item.ptndemerde.sorbet_etrange": "Sorbet étrange",
   "subtitles.monde_technologique": "Ils sont pas réels...",
   "item.ptndemerde.tabac_fume": "Tabac Fume",
   "entity.ptndemerde.chat_tete_nouille": "Chat vêtu de nouilles",
   "item.ptndemerde.chicheur_spawn_egg": "Chicheur Spawn Egg",
   "item.ptndemerde.bol_nouilles_piquante": "Bol de nouilles piquantes",
   "painting.ptndemerde.painting_child.author": "Maknav",
+  "item.ptndemerde.purified_potato": "Pomme de terre purifiée",
   "effect.ptndemerde.effect_relaxed": "Relaxé",
   "item.ptndemerde.porc_spawn_egg": "Porc Spawn Egg",
   "item.ptndemerde.laser_ball": "Laser Ball",
@@ -52,7 +56,9 @@
   "item_group.ptndemerde.ptndemerde_tab": "Ptndemerde",
   "item.ptndemerde.petard_datura": "Pétard de Datura",
   "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
+  "item.ptndemerde.omega_titan_spawn_egg": "Omega Titan Spawn Egg",
   "item.ptndemerde.falin_sword": "Épée en Falin",
   "advancements.advancement_chicha.title": "Narguilator",
-  "gui.ptndemerde.gui_chicheur.label_le_chicheur_veut_bien_vous_echan": "Le chicheur veut bien vous"
+  "gui.ptndemerde.gui_chicheur.label_le_chicheur_veut_bien_vous_echan": "Le chicheur veut bien vous",
+  "item.ptndemerde.golden_purified_potato": "Pomme de terre purifiée dorée"
 }
