acabisque popos spidermaki tourte soupeend cornetblaze alleeeeeeez prend ça maknav

--- a/src/main/resources/assets/ptndemerde/lang/en_us.json
+++ b/src/main/resources/assets/ptndemerde/lang/en_us.json
@@ -1,6 +1,6 @@
 {
+  "entity.ptndemerde.porc": "Porcius",
   "entity.ptndemerde.omega_titan": "Omega Titan",
-  "entity.ptndemerde.porc": "Porc",
   "biome.ptndemerde.datura_fields": "Datura Fields",
   "entity.ptndemerde.mu": "Mu",
   "gui.ptndemerde.gui_chicheur.label_x50": "x50",
@@ -8,6 +8,8 @@
   "advancements.advancement_tabac.descr": "Vous avez commencé à produire du tabac !",
   "item.ptndemerde.lambda_bat_spawn_egg": "Lambda Bat Spawn Egg",
   "gui.ptndemerde.gui_chicheur.label_dependance_si_vous_avez_de_quoi": "dépendance, si vous avez de",
+  "item.ptndemerde.acabisque_spawn_egg": "Acabisque Spawn Egg",
+  "item.ptndemerde.tourte_des_mers": "Tourte des mers",
   "block.ptndemerde.chicha": "Chicha",
   "item.ptndemerde.nouilles": "Nouilles",
   "entity.ptndemerde.molosse": "Sigma Hound",
@@ -20,6 +22,7 @@
   "block.ptndemerde.salvia_divinorum": "Salvia divinorum",
   "block.ptndemerde.campfire_bucket": "Feu de camp avec un seau",
   "item.ptndemerde.molosse_spawn_egg": "Sigma Hound Spawn Egg",
+  "item.ptndemerde.popbone_bucket": "Seau de Pop-os",
   "block.ptndemerde.tabac_grown": "Tabac 1",
   "effect.ptndemerde.effect_chicha": "Narguilé",
   "block.ptndemerde.tabac_3": "Tabac 1",
@@ -29,7 +32,9 @@
   "block.ptndemerde.tabac_2": "Tabac 1",
   "item.ptndemerde.bol_nouilles_jajangmyeon": "Bol de nouilles Jajangmyeon",
   "item.ptndemerde.monde_technologique": "Monde Technologique",
+  "entity.ptndemerde.acabisque": "Acabisque",
   "item.ptndemerde.bol_nouilles_slime": "Bol de nouilles au Slime",
+  "item.ptndemerde.cornet_de_blaze": "Cornet de Blaze",
   "advancements.advancement_chicha.descr": "Vous êtes un.e chicheureuse professionel.le...",
   "item.ptndemerde.papier_ines": "Papier Ines",
   "item.ptndemerde.graines_de_tabac": "Graines De Tabac",
@@ -42,21 +47,25 @@
   "painting.ptndemerde.painting_child.author": "Maknav",
   "item.ptndemerde.purified_potato": "Pomme de terre purifiée",
   "effect.ptndemerde.effect_relaxed": "Relaxé",
-  "item.ptndemerde.porc_spawn_egg": "Porc Spawn Egg",
+  "item.ptndemerde.porc_spawn_egg": "Porcius Spawn Egg",
   "item.ptndemerde.laser_ball": "Laser Ball",
   "item.ptndemerde.bol_nouilles_legumes": "Bol de nouilles aux légumes",
   "item.ptndemerde.bol_nouilles": "Bol de nouilles",
   "item.ptndemerde.chair_putrefiee_doree": "Chair putréfiée dorée",
   "gui.ptndemerde.gui_chicheur.label_quoi_soulager_la_sienne_aussi_e": "quoi soulager la sienne aussi,",
+  "item.ptndemerde.soupe_end": "Soupe de l\u0027End",
   "item.ptndemerde.chat_tete_nouille_spawn_egg": "Chat vêtu de nouilles Spawn Egg",
   "item.ptndemerde.mu_spawn_egg": "Mu Spawn Egg",
   "item.ptndemerde.nouilles_seches": "Nouilles sèches",
   "gui.ptndemerde.gui_chicheur.label_echanger_de_quoi_soulager_votre": "échanger de quoi soulager votre",
   "advancements.advancement_tabac.title": "Sur la route du chichage",
+  "item.ptndemerde.popbone": "Pop-os",
   "item_group.ptndemerde.ptndemerde_tab": "Ptndemerde",
   "item.ptndemerde.petard_datura": "Pétard de Datura",
   "gui.ptndemerde.gui_chicheur.button_dealer": "Dealer",
   "item.ptndemerde.omega_titan_spawn_egg": "Omega Titan Spawn Egg",
+  "item.ptndemerde.spider_maki": "Maki d\u0027araignée",
+  "item.ptndemerde.acabisque_bone": "Os d\u0027Acabisque",
   "item.ptndemerde.falin_sword": "Épée en Falin",
   "advancements.advancement_chicha.title": "Narguilator",
   "gui.ptndemerde.gui_chicheur.label_le_chicheur_veut_bien_vous_echan": "Le chicheur veut bien vous",
